Menu com escolha de menssagens